--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
   <properties>
     <java.version>21</java.version>
     <spring.boot.version>3.3.5</spring.boot.version>
+    <!-- jackson version of spring-boot-starter-json:3.3.5 -->
+    <jackson.version>2.17.2</jackson.version>
   </properties>
   <dependencies>
     <dependency>
@@ -59,6 +61,16 @@
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>2.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
