--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=restful-web-services
 logging.level.org.springframework=INFO
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test-db
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
