--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,14 @@
   <name>restful-web-services</name>
   <description>RESTful Web services</description>
   <url/>
-  <licenses>
-    <license/>
-  </licenses>
   <developers>
-    <developer/>
+    <developer>
+      <name>Troy P. Chuang</name>
+      <email>tpchuang@hotmail.com</email>
+    </developer>
   </developers>
   <scm>
-    <connection/>
-    <developerConnection/>
-    <tag/>
-    <url/>
+    <url>https://github.com/tpchuang/currency-conversion-service</url>
   </scm>
   <properties>
     <java.version>21</java.version>
@@ -109,6 +106,18 @@
 
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <annotationProcessorPaths>
+            <path>
+              <artifactId>lombok</artifactId>
+              <groupId>org.projectlombok</groupId>
+            </path>
+          </annotationProcessorPaths>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
